# bbow

./: .gitignore  Cargo.toml  README.md
src/: browser.rs  client.rs  extractor.rs  history.rs  jony.rs  links.rs  main.rs  markdown.rs  openai.rs  ui.rs  ui_common.rs
src/common/: markdown.rs  mod.rs  ui.rs
src/ui/: default.rs  expi.rs  jony.rs  mod.rs  robocop.rs
