[package]
name = "bbow"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.26"
url = "2.4"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
textwrap = "0.16"
crossterm = "0.27"